# gitoxide

./: .gitattributes  .mailmap  AGENTS.md  CHANGELOG.md  COLLABORATING.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Makefile  README.md  SHORTCOMINGS.md  STABILITY.md  build.rs  crate-status.md  deny.toml  justfile  scratchwork.ps1  tasks.md
gitoxide-core/: CHANGELOG.md  Cargo.toml
gitoxide-core/src/: lib.rs  mailmap.rs  net.rs  organize.rs  output.rs  remote.rs
gitoxide-core/src/commitgraph/: verify.rs
gitoxide-core/src/corpus/: db.rs  engine.rs  trace.rs
gitoxide-core/src/hours/: core.rs  mod.rs  util.rs
gitoxide-core/src/index/: checkout.rs  information.rs
gitoxide-core/src/pack/: create.rs  explode.rs  index.rs  multi_index.rs  receive.rs  verify.rs
gitoxide-core/src/query/: db.rs
gitoxide-core/src/repository/: archive.rs  blame.rs  branch.rs  cat.rs  clean.rs  clone.rs  commit.rs  config.rs  credential.rs  diff.rs  dirty.rs  dirwalk.rs  exclude.rs  fetch.rs  fsck.rs  log.rs  mailmap.rs  merge.rs  merge_base.rs  mod.rs  odb.rs  remote.rs  status.rs  submodule.rs  tag.rs  tree.rs  verify.rs  worktree.rs
gix-attributes/: CHANGELOG.md  Cargo.toml
gix-attributes/benches/: lookup.rs
gix-attributes/fuzz/: Cargo.toml
gix-attributes/src/: lib.rs  name.rs  parse.rs  source.rs
gix-attributes/src/search/: attributes.rs  mod.rs  outcome.rs  refmap.rs
gix-attributes/tests/attributes/: parse.rs  search.rs  state.rs
gix-attributes/tests/fixtures/: make_attributes_baseline.sh
gix-attributes/tests/parse/: mod.rs
gix-attributes/tests/search/: mod.rs
gix-blame/: CHANGELOG.md  Cargo.toml
gix-blame/src/: error.rs  lib.rs  types.rs
gix-blame/src/file/: function.rs  mod.rs  tests.rs
gix-blame/tests/: blame.rs
gix-blame/tests/fixtures/: make_blame_rename_tracking_repo.sh  make_blame_repo.sh  make_blame_two_roots_repo.sh
gix-command/: CHANGELOG.md  Cargo.toml
gix-command/fuzz/: Cargo.toml
gix-command/fuzz/fuzz_targets/: prepare.rs  prepare_corpus_builder.sh
gix-command/src/: lib.rs
gix-command/tests/: command.rs
gix-commitgraph/: CHANGELOG.md  Cargo.toml
gix-commitgraph/fuzz/: Cargo.toml
gix-commitgraph/fuzz/fuzz_targets/: fuzz_file.rs
gix-commitgraph/src/: access.rs  init.rs  lib.rs  verify.rs
gix-commitgraph/src/file/: access.rs  commit.rs  init.rs  mod.rs  verify.rs
gix-commitgraph/tests/: commitgraph.rs
gix-commitgraph/tests/access/: mod.rs
gix-config/: CHANGELOG.md  Cargo.toml  README.md
gix-config/benches/: large_config_file.rs  lookup.rs
gix-config/fuzz/: .gitignore  Cargo.toml
gix-config/src/: format.rs  key.rs  lib.rs  lookup.rs  source.rs  types.rs
gix-config/tests/: .gitattributes  Cargo.toml  mem.rs
gix-credentials/: CHANGELOG.md  Cargo.toml
gix-credentials/examples/: custom-helper.rs  git-credential-lite.rs
gix-credentials/fuzz/: Cargo.toml
gix-credentials/src/: lib.rs
gix-diff/: CHANGELOG.md  Cargo.toml
gix-diff/benches/: line_count.rs  rewrite_tracker.rs
gix-diff/src/: lib.rs
gix-diff/tests/: Cargo.toml  README.md
gix-dir/: CHANGELOG.md  Cargo.toml
gix-dir/src/: entry.rs  lib.rs
gix-dir/tests/: dir_cwd.rs
gix-discover/: CHANGELOG.md  Cargo.toml
gix-discover/src/: is.rs  lib.rs  parse.rs  path.rs  repository.rs
gix-discover/tests/: isolated.rs
gix-error/: CHANGELOG.md  Cargo.toml
gix-error/src/: error.rs  lib.rs  message.rs  parse.rs
gix-error/tests/: auto_chain_error.rs
gix-features/: CHANGELOG.md  Cargo.toml
gix-features/src/: cache.rs  decode.rs  fs.rs  hash.rs  lib.rs  progress.rs  threading.rs
gix-features/tests/: parallel_threaded.rs  pipe.rs  zlib.rs
gix-filter/: CHANGELOG.md  Cargo.toml
gix-filter/examples/: arrow.rs
gix-filter/src/: ident.rs  lib.rs
gix-fs/: CHANGELOG.md  Cargo.toml
gix-fs/src/: capabilities.rs  lib.rs  read_dir.rs  snapshot.rs  stack.rs  symlink.rs
gix-fsck/: CHANGELOG.md  Cargo.toml
gix-fsck/src/: lib.rs
gix-hash/: CHANGELOG.md  Cargo.toml
gix-hash/src/: hasher.rs  io.rs  kind.rs  lib.rs  object_id.rs  oid.rs  prefix.rs  verify.rs
gix-imara-diff/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM-PROVENANCE.tsv
gix-imara-diff/fuzz/: Cargo.toml
gix-imara-diff/src/: histogram.rs  intern.rs  lib.rs  myers.rs  postprocess.rs  slider_heuristic.rs  sources.rs  unified_diff.rs  util.rs
gix-imara-diff/tests/: package_provenance.rs
gix-index/: CHANGELOG.md  Cargo.toml
gix-index/benches/: from_tree.rs
gix-index/fuzz/: Cargo.toml  README.md
gix-index/src/: fs.rs  init.rs  lib.rs  verify.rs  write.rs
gix-index/tests/: Cargo.toml
gix-lock/: CHANGELOG.md  Cargo.toml
gix-lock/src/: acquire.rs  file.rs  lib.rs
gix-merge/: CHANGELOG.md  Cargo.toml
gix-merge/fuzz/: Cargo.toml
gix-merge/src/: commit.rs  lib.rs
gix-negotiate/: CHANGELOG.md  Cargo.toml
gix-negotiate/src/: consecutive.rs  lib.rs  skipping.rs
gix-negotiate/tests/: negotiate.rs
gix-odb/: CHANGELOG.md  Cargo.toml
gix-odb/src/: cache.rs  lib.rs  memory.rs  sink.rs
gix-odb/tests/: Cargo.toml  doctest.rs
gix-path/: CHANGELOG.md  Cargo.toml
gix-path/src/: convert.rs  lib.rs  realpath.rs  relative_path.rs
gix-pathspec/: CHANGELOG.md  Cargo.toml
gix-pathspec/fuzz/: Cargo.toml
gix-pathspec/src/: defaults.rs  lib.rs  parse.rs  pattern.rs
gix-prompt/: CHANGELOG.md  Cargo.toml
gix-prompt/examples/: use-askpass.rs
gix-prompt/src/: lib.rs  types.rs  unix.rs
gix-prompt/tests/: prompt.rs
gix-ref/: CHANGELOG.md  Cargo.toml
gix-ref/fuzz/: Cargo.toml
gix-ref/src/: display_tests.rs  fullname.rs  lib.rs  name.rs  namespace.rs  parse.rs  peel.rs  raw.rs  target.rs
gix-ref/tests/: Cargo.toml
gix-refspec/: CHANGELOG.md  Cargo.toml
gix-refspec/fuzz/: Cargo.toml
gix-refspec/src/: instruction.rs  lib.rs  parse.rs  spec.rs  write.rs
gix-revision/: CHANGELOG.md  Cargo.toml
gix-revision/fuzz/: Cargo.toml
gix-revision/src/: describe.rs  lib.rs
gix-revwalk/: CHANGELOG.md  Cargo.toml
gix-revwalk/src/: lib.rs
gix-revwalk/tests/: revwalk.rs
gix-shallow/: CHANGELOG.md  Cargo.toml
gix-shallow/src/: lib.rs
(+1861 files in other folders)
