lints.workspace = true

[package]
name = "gix-attributes"
version = "0.26.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing .gitattributes files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.70"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-glob/serde", "kstring/serde"]

[dependencies]
gix-path = { version = "^0.10.18", path = "../gix-path" }
gix-quote = { version = "^0.6.0", path = "../gix-quote" }
gix-glob = { version = "^0.20.1", path = "../gix-glob" }
gix-trace = { version = "^0.1.12", path = "../gix-trace" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
smallvec = "1.15.0"
kstring = "2.0.0"
unicode-bom = { version = "2.0.3" }
thiserror = "2.0.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
