lints.workspace = true

[package]
name = "gix-attributes"
version = "0.33.2"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing .gitattributes files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.85"

[lib]
doctest = true

[[bench]]
name = "lookup"
harness = false
path = "./benches/lookup.rs"

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-glob/serde"]
## Enable thread-safety, otherwise the Search cannot be passed between threads.
parallel = ["gix-features/parallel"]

[dependencies]
gix-features = { version = "^0.48.1", path = "../gix-features" }
gix-path = { version = "^0.12.3", path = "../gix-path" }
gix-quote = { version = "^0.7.2", path = "../gix-quote" }
gix-glob = { version = "^0.26.1", path = "../gix-glob" }
gix-trace = { version = "^0.1.21", path = "../gix-trace" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
smallvec = "1.15.1"
unicode-bom = { version = "2.0.3" }
thiserror = "2.0.18"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
criterion = "0.8.2"
gix-testtools = { path = "../tests/tools", default-features = false }
gix-fs = { path = "../gix-fs" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
