lints.workspace = true

[package]
name = "gix-blame"
version = "0.5.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated to implementing a 'blame' algorithm"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
gix-commitgraph = { version = "^0.30.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.23.0", path = "../gix-revwalk" }
gix-trace = { version = "^0.1.14", path = "../gix-trace" }
gix-date = { version = "^0.11.0", path = "../gix-date" }
gix-diff = { version = "^0.55.0", path = "../gix-diff", default-features = false, features = ["blob"] }
gix-object = { version = "^0.52.0", path = "../gix-object" }
gix-hash = { version = "^0.20.0", path = "../gix-hash" }
gix-worktree = { version = "^0.44.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-traverse = { version = "^0.49.0", path = "../gix-traverse" }

smallvec = "1.15.1"
thiserror = "2.0.17"

[dev-dependencies]
gix-ref = { path = "../gix-ref" }
gix-filter = { path = "../gix-filter" }
gix-fs = { path = "../gix-fs" }
gix-index = { path = "../gix-index" }
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
pretty_assertions = "1.4.0"
