lints.workspace = true

[package]
name = "gix-blame"
version = "0.6.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated to implementing a 'blame' algorithm"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[features]
## An experimental use of the v0.2 branch of `imara-diff` to allow trying it out, and for writing tests against it more easily.
## We will decide later how it should actually be exposed.
blob-experimental = ["gix-diff/blob-experimental"]

[dependencies]
gix-commitgraph = { version = "^0.31.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.24.0", path = "../gix-revwalk" }
gix-trace = { version = "^0.1.16", path = "../gix-trace" }
gix-date = { version = "^0.11.1", path = "../gix-date" }
gix-diff = { version = "^0.56.0", path = "../gix-diff", default-features = false, features = ["blob"] }
gix-object = { version = "^0.53.0", path = "../gix-object" }
gix-hash = { version = "^0.21.0", path = "../gix-hash" }
gix-worktree = { version = "^0.45.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-traverse = { version = "^0.50.0", path = "../gix-traverse" }

smallvec = "1.15.1"
thiserror = "2.0.17"

[dev-dependencies]
gix-ref = { path = "../gix-ref" }
gix-filter = { path = "../gix-filter" }
gix-fs = { path = "../gix-fs" }
gix-index = { path = "../gix-index" }
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
pretty_assertions = "1.4.0"
