lints.workspace = true

[package]
name = "gix-commitgraph"
version = "0.26.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
documentation = "https://git-scm.com/docs/commit-graph"
license = "MIT OR Apache-2.0"
description = "Read-only access to the git commitgraph file format"
authors = ["Conor Davis <gitoxide@conor.fastmail.fm>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.70"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`
serde = ["dep:serde", "gix-hash/serde", "bstr/serde"]

[dependencies]
gix-hash = { version = "^0.16.0", path = "../gix-hash" }
gix-chunk = { version = "^0.4.11", path = "../gix-chunk" }

bstr = { version = "1.3.0", default-features = false, features = ["std"] }
memmap2 = "0.9.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
thiserror = "2.0.0"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-date = { path = "../gix-date" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
