lints.workspace = true

[package]
name = "gix-config"
version = "0.45.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
description = "A git-config file parser and editor from the gitoxide project"
license = "MIT OR Apache-2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2021"
keywords = ["git-config", "git", "config", "gitoxide"]
categories = ["config", "parser-implementations"]
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.70"
autotests = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-sec/serde", "gix-ref/serde", "gix-glob/serde", "gix-config-value/serde"]

[dependencies]
gix-features = { version = "^0.42.1", path = "../gix-features" }
gix-config-value = { version = "^0.15.0", path = "../gix-config-value" }
gix-path = { version = "^0.10.18", path = "../gix-path" }
gix-sec = { version = "^0.11.0", path = "../gix-sec" }
gix-ref = { version = "^0.52.1", path = "../gix-ref" }
gix-glob = { version = "^0.20.1", path = "../gix-glob" }

winnow = { version = "0.7.7", features = ["simd"] }
memchr = "2"
thiserror = "2.0.0"
unicode-bom = { version = "2.0.3" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
smallvec = "1.15.0"
once_cell = "1.21.3"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "large_config_file"
harness = false
path = "./benches/large_config_file.rs"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
