lints.workspace = true

[package]
name = "gix-credentials"
version = "0.39.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project to interact with git credentials helpers"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
rust-version = "1.85"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-sec/serde"]

[dependencies]
gix-sec = { version = "^0.14.2", path = "../gix-sec" }
gix-url = { version = "^0.37.0", path = "../gix-url" }
gix-path = { version = "^0.12.3", path = "../gix-path" }
gix-command = { version = "^0.9.1", path = "../gix-command" }
gix-config-value = { version = "^0.19.0", path = "../gix-config-value" }
gix-prompt = { version = "^0.16.0", path = "../gix-prompt" }
gix-date = { version = "^0.15.6", path = "../gix-date" }
gix-trace = { version = "^0.1.21", path = "../gix-trace" }

thiserror = "2.0.18"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }



document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-quote = { path = "../gix-quote" }
gix-sec = { path = "../gix-sec" }
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Public optional `serde` feature is retained for downstream feature compatibility.
    "serde",
]
