lints.workspace = true

[package]
name = "gix-dir"
version = "0.15.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.70"

[lib]
doctest = false
test = false

[dependencies]
gix-trace = { version = "^0.1.13", path = "../gix-trace" }
gix-index = { version = "^0.41.0", path = "../gix-index" }
gix-discover = { version = "^0.41.0", path = "../gix-discover" }
gix-fs = { version = "^0.16.1", path = "../gix-fs" }
gix-path = { version = "^0.10.20", path = "../gix-path" }
gix-pathspec = { version = "^0.12.0", path = "../gix-pathspec" }
gix-worktree = { version = "^0.42.0", path = "../gix-worktree", default-features = false }
gix-object = { version = "^0.50.2", path = "../gix-object" }
gix-ignore = { version = "^0.16.0", path = "../gix-ignore" }
gix-utils = { version = "^0.3.0", path = "../gix-utils", features = ["bstr"] }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }
pretty_assertions = "1.4.0"
