lints.workspace = true

[package]
name = "gix-dir"
version = "0.23.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lib]
doctest = false
test = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-discover/sha1", "gix-index/sha1", "gix-object/sha1", "gix-worktree/sha1"]

[dependencies]
gix-trace = { version = "^0.1.18", path = "../gix-trace" }
gix-index = { version = "^0.49.0", path = "../gix-index" }
gix-discover = { version = "^0.49.0", path = "../gix-discover" }
gix-fs = { version = "^0.19.2", path = "../gix-fs" }
gix-path = { version = "^0.11.2", path = "../gix-path" }
gix-pathspec = { version = "^0.16.1", path = "../gix-pathspec" }
gix-worktree = { version = "^0.50.0", path = "../gix-worktree", default-features = false }
gix-object = { version = "^0.58.0", path = "../gix-object" }
gix-ignore = { version = "^0.19.1", path = "../gix-ignore" }
gix-utils = { version = "^0.3.1", path = "../gix-utils", features = ["bstr"] }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
