lints.workspace = true

[package]
name = "gix-dir"
version = "0.27.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
rust-version = "1.85"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false
test = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-index/sha1"]
## Enable support for the SHA-256 hash by forwarding the feature to dependencies.
sha256 = ["gix-index/sha256"]

[dependencies]
gix-trace = { version = "^0.1.20", path = "../gix-trace" }
gix-index = { version = "^0.53.0", path = "../gix-index" }
gix-discover = { version = "^0.53.0", path = "../gix-discover" }
gix-fs = { version = "^0.21.2", path = "../gix-fs" }
gix-path = { version = "^0.12.1", path = "../gix-path" }
gix-pathspec = { version = "^0.18.1", path = "../gix-pathspec" }
gix-worktree = { version = "^0.54.0", path = "../gix-worktree", default-features = false }
gix-object = { version = "^0.62.0", path = "../gix-object" }
gix-ignore = { version = "^0.21.1", path = "../gix-ignore" }
gix-utils = { version = "^0.3.3", path = "../gix-utils", features = ["bstr"] }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
