lints.workspace = true

[package]
name = "gix-discover"
version = "0.47.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "Discover git repositories and check if a directory is a git repository"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
gix-sec = { version = "^0.13.1", path = "../gix-sec" }
gix-path = { version = "^0.11.1", path = "../gix-path" }
gix-ref = { version = "^0.59.0", path = "../gix-ref" }
gix-fs = { version = "^0.19.1", path = "../gix-fs" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.3"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.3.1", default-features = false }
is_ci = "1.1.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
defer = "0.2.1"

[target.'cfg(any(unix, windows))'.dev-dependencies]
tempfile = "3.24.0"
