lints.workspace = true

[package]
name = "gix-error"
version = "0.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project to provide common errors and error-handling utilities"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[features]
## If enabled, the `Exn` error type converts to `anyhow::Error` natively so `?` can be used directly.
anyhow = ["dep:anyhow"]

[dependencies]
bstr = { version = "1.12.0", default-features = false, features = ["std"] }

anyhow = { version = "1.0.100", optional = true }
document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-error = { path = ".", features = ["anyhow"] }
insta = "1.46.0"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]

